--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <nav class="navigation">
     <a target="_blank" class="nav-links" href="https://soundcloud.com/tucheetta-136382252">soundcloud</a><br> 
-    <a target="_blank" class="nav-links" href="https://tucheetta.bandcamp.com/releases>bandcamp</a><br>
+    <a target="_blank" class="nav-links" href="https://tucheetta.bandcamp.com/releases">bandcamp</a><br>
     <a target="_blank" class="nav-links" href="https://instagram.com/tucheetta">instagram</a><br>
     <a target="_blank" class="nav-links" href="mailto:tucheetta@gmail.com">booking</a><br>
 </div>
