--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <a target="_blank" class="nav-links" href="mailto:tucheetta@gmail.com">booking</a><br>
 </div>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/T0r6wz7WIl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div class="footer"><p>©tucheetta 2021</p></div>
 
 </body>
